infra/k8s/hard-way/admin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: k8s-admin
spec:
  serviceAccountName: k8s-admin
  containers:
    - image: dalthonmh/k8s-admin:latest
      name: kube
