infra/k8s/hard-way/acme-challenge.yaml
apiVersion: v1
kind: Service
metadata:
  name: acme-challenge
  labels:
    app: acme-challenge
spec:
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: acme-challenge
---
apiVersion: v1
kind: Pod
metadata:
  name: acme-challenge
  labels:
    app: acme-challenge
spec:
  containers:
    - image: nginx
      name: nginx
      ports:
        - containerPort: 80
          name: http
