infra/k8s/hard-way/ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-easy
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/service-upstream: "true"

spec:
  ingressClassName: nginx
  rules:
    - host: postulaunjbg.lat
      http:
        paths:
          - path: /api/auth/
            pathType: Prefix
            backend:
              service:
                name: todoapp-auth-srv
                port:
                  number: 8080

          - path: /api/tasks
            pathType: Prefix
            backend:
              service:
                name: todoapp-core-srv
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: todoapp-web-srv
                port:
                  number: 80

  tls:
    - hosts:
        - postulaunjbg.lat
      secretName: test-tls
